2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Freeing the unmanaged array after it has been
	  marshaled to managed code. This was a huge memory leak.

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Implemented the new API for the Filesystem
	* libgphoto2-sharp.mdp: Readded the TestGphoto2Sharp.cs file to the solution

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* Sample/Main.cs: Removed accidently committed testcase for a bug.
	* src/Camera.cs: Also checking to make sure the object hasn't been disposed.

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Cosmetic changes to the existing file class.
	* src/TestGphoto2Sharp.cs: Removed old file
	* src/FileSystem.cs: Created a wrapper class for the FileSystem/StorageInfo
	  structs. No methods implemented.
	* src/Camera.cs: Created a wrapper class for 'Camera' with a handful of
	  basic methods/properties
	* src/Abilities.cs: Created a wrapper class for CameraAbilities. All camera
	  abilities, file operations and folder operations are exposed as boolean
	  properties.
	* libgphoto2-sharp.mds, Sample, Sample/AssemblyInfo.cs, Sample/Main.cs,
	  Sample/Sample.mdp: Added a sample console application to demonstrate API
	  usage

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFilesystem.cs: Added xml comments
	* src/Base/Camera.cs: Fixed a leak. The native array needs to be free'ed.
	* src/Base/CameraAbilitiesList.cs: Added the flags attribute to the enums to
	  make it clearer that they are bitfields

2007-09-09  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraList.cs: Added comments

2007-09-08  Alan McGovern <alan.mcgovern@gmail.com> 

	* libgphoto2-sharp.mdp: Removed useless files
	* src/Camera.cs: Cosmetic
	* src/Detector.cs: Removed obsolete file

2007-09-07  Alan McGovern <alan.mcgovern@gmail.com> 
